Spacing fixes

--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -196,7 +196,7 @@
 // Get In Touch section styling
 .get-in-touch {
   margin-top: 60px;
-  margin-bottom: 60px;
+  margin-bottom: 0;
   border-radius: 8px;
   background-color: vars.$terracotta;
   padding: 40px 0;
